# Contract-Manager

./: .replit  pyproject.toml  replit.md  threat_model.md
.agents/memory/: docx-export-approach.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: app.ts
artifacts/contract-manager/: app.py  models.py  requirements.txt
artifacts/contract-manager/.replit-artifact/: artifact.edit.toml
artifacts/contract-manager/static/css/: style.css
artifacts/contract-manager/static/js/: main.js
artifacts/contract-manager/templates/: base.html  dashboard.html
artifacts/contract-manager/templates/auth/: login.html  register.html
artifacts/contract-manager/templates/clients/: detail.html  list.html  new.html
artifacts/contract-manager/templates/contracts/: compare.html  detail.html  edit.html  list.html  new.html  revision_new.html
artifacts/contract-manager/templates/templates/: detail.html  list.html  new.html
artifacts/contract-manager/uploads/: contract_6_20260720165854_import_test.docx  tpl_20260720132629_test_template.docx  tpl_20260720172225_rich_template.docx  tpl_20260720174719_plus_template.docx
attached_assets/: AGREED_AND_ACCEPTED_1784646744567.docx  Pasted-sudo-journalctl-u-contract-f-Jul-20-17-27-59-Contract-1_1784568523367.txt
