[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf==1.2.1",
    "psycopg2-binary>=2.9.12",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "sqlalchemy>=2.0.51",
    "werkzeug>=3.1.8",
]
